// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`insight-engine gate failure audit (demo dataset, Fase 7.2) > UDS: rule-failure breakdown 1`] = `
{
  "contributionPositiveAudit": {
    "failing": 0,
    "items": [],
    "passing": 0,
    "totalSelectedContributionUp": 0,
  },
  "failingItems": [
    {
      "accion": "Contactar a Mercado Central para entender la caída de frecuencia — confirmar si es estacional o requiere atención comercial.",
      "description": "Mercado Central tiene una frecuencia de compra de 13.00, 2.8σ por debajo del promedio del grupo (19.75). Cliente atendido por Ana González en Ahuachapán.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
      ],
      "impactoUsdRounded": 68,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "outlier",
      "member": "Mercado Central",
      "metricId": "frecuencia_compra",
      "rank": 15,
      "scoreRounded": 0.7083,
      "severity": "ALTA",
      "title": "↓ Mercado Central — frecuencia de compra baja",
    },
    {
      "accion": null,
      "description": "Supermercado Nacional: 254 uds vs 109 uds en el mismo período del año anterior (+133.0%) Cliente atendido por Ana González en Ahuachapán.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
        "pareto",
        "narrativeCoherence",
      ],
      "impactoUsdRounded": 310,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "change",
      "member": "Supermercado Nacional",
      "metricId": "venta",
      "rank": 22,
      "scoreRounded": 1,
      "severity": "CRITICA",
      "title": "↑ Supermercado Nacional — cambio en Venta",
    },
    {
      "accion": null,
      "description": "Pulpería San José muestra una tendencia creciente en Ventas por cliente en los últimos 3 meses (206 → 508, +146.2%) Cliente atendido por Ana González en Ahuachapán.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
        "narrativeCoherence",
      ],
      "impactoUsdRounded": 143,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "trend",
      "member": "Pulpería San José",
      "metricId": "ventas_por_cliente",
      "rank": 23,
      "scoreRounded": 1,
      "severity": "CRITICA",
      "title": "📈 Pulpería San José — tendencia creciente",
    },
    {
      "accion": null,
      "description": "Mayoreo Santa Ana muestra una tendencia creciente en SKUs activos en los últimos 3 meses (6 → 14, +133.3%) Cliente atendido por Ana González en Santa Ana.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
        "narrativeCoherence",
      ],
      "impactoUsdRounded": 196,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "trend",
      "member": "Mayoreo Santa Ana",
      "metricId": "skus_activos",
      "rank": 24,
      "scoreRounded": 1,
      "severity": "ALTA",
      "title": "📈 Mayoreo Santa Ana — tendencia creciente",
    },
  ],
  "failsByMetricAndRule": {
    "frecuencia_compra": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 0,
    },
    "skus_activos": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 0,
    },
    "venta": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 1,
    },
    "ventas_por_cliente": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 0,
    },
  },
  "failsByRule": {
    "materiality": 4,
    "monetaryCoherence": 0,
    "narrativeCoherence": 3,
    "pareto": 1,
  },
  "failsByTypeAndRule": {
    "change": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 1,
    },
    "outlier": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 0,
    },
    "trend": {
      "materiality": 2,
      "monetaryCoherence": 0,
      "narrativeCoherence": 2,
      "pareto": 0,
    },
  },
  "gateFailCount": 4,
  "gatePassCount": 20,
  "gateRescuedByContributionUpException": 0,
  "onlyMonetaryCoherenceFails": {
    "items": [],
    "total": 0,
  },
  "poolSize": 24,
  "usdSourceDistributionInR3Fails": {},
}
`;

exports[`insight-engine gate failure audit (demo dataset, Fase 7.2) > USD: rule-failure breakdown 1`] = `
{
  "contributionPositiveAudit": {
    "failing": 1,
    "items": [
      {
        "accionPresent": false,
        "dimensionId": "canal",
        "failedRules": [
          "materiality",
          "pareto",
          "narrativeCoherence",
        ],
        "impactoUsdRounded": 664,
        "impactoUsdSource": "recuperable",
        "meetsAllProposed": true,
        "meetsImpactoMin1pct": true,
        "meetsScore095": true,
        "meetsSeverityHigh": true,
        "member": "Mostrador",
        "metricId": "venta",
        "passes": false,
        "scoreRounded": 1,
        "severity": "CRITICA",
        "usdShareOfBusinessPct": 1.7,
      },
    ],
    "passing": 0,
    "totalSelectedContributionUp": 1,
  },
  "failingItems": [
    {
      "accion": "Replicar el patrón de Snacks en otras combinaciones similares.",
      "description": "categoria=Snacks: $1,273 vs meta $522 (243.9%). sobrecumplió la meta del período por 751.3 USD.",
      "dimensionId": "categoria",
      "failedRules": [
        "materiality",
      ],
      "impactoUsdRounded": 751,
      "impactoUsdSource": "gap_meta",
      "insightTypeId": "meta_gap",
      "member": "Snacks",
      "metricId": "cumplimiento_meta",
      "rank": 13,
      "scoreRounded": 0.95,
      "severity": "ALTA",
      "title": "↑ Snacks: 244% de meta",
    },
    {
      "accion": "Contactar a Mercado Central para entender la caída de frecuencia — confirmar si es estacional o requiere atención comercial.",
      "description": "Mercado Central tiene una frecuencia de compra de 13.00, 2.8σ por debajo del promedio del grupo (19.75). Cliente atendido por Ana González en Ahuachapán.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
      ],
      "impactoUsdRounded": 68,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "outlier",
      "member": "Mercado Central",
      "metricId": "frecuencia_compra",
      "rank": 18,
      "scoreRounded": 0.7083,
      "severity": "ALTA",
      "title": "↓ Mercado Central — frecuencia de compra baja",
    },
    {
      "accion": null,
      "description": "Mostrador: 12,737 USD → 13,401 USD (+5.2%). Venta del grupo: 38,758 USD → 39,156 USD (+1.0%). Mostrador fue el principal responsable del crecimiento.",
      "dimensionId": "canal",
      "failedRules": [
        "materiality",
        "pareto",
        "narrativeCoherence",
      ],
      "impactoUsdRounded": 664,
      "impactoUsdSource": "recuperable",
      "insightTypeId": "contribution",
      "member": "Mostrador",
      "metricId": "venta",
      "rank": 23,
      "scoreRounded": 1,
      "severity": "CRITICA",
      "title": "↑ Mostrador — mayor aporte al crecimiento en Venta",
    },
    {
      "accion": null,
      "description": "Supermercado Nacional: 254 uds vs 109 uds en el mismo período del año anterior (+133.0%) Cliente atendido por Ana González en Ahuachapán.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
        "pareto",
        "narrativeCoherence",
      ],
      "impactoUsdRounded": 310,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "change",
      "member": "Supermercado Nacional",
      "metricId": "unidades",
      "rank": 24,
      "scoreRounded": 1,
      "severity": "CRITICA",
      "title": "↑ Supermercado Nacional — cambio en Unidades",
    },
    {
      "accion": null,
      "description": "Mayoreo Santa Ana muestra una tendencia creciente en SKUs activos en los últimos 3 meses (6 → 14, +133.3%) Cliente atendido por Ana González en Santa Ana.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
        "narrativeCoherence",
      ],
      "impactoUsdRounded": 196,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "trend",
      "member": "Mayoreo Santa Ana",
      "metricId": "skus_activos",
      "rank": 25,
      "scoreRounded": 1,
      "severity": "ALTA",
      "title": "📈 Mayoreo Santa Ana — tendencia creciente",
    },
  ],
  "failsByMetricAndRule": {
    "cumplimiento_meta": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 0,
    },
    "frecuencia_compra": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 0,
    },
    "skus_activos": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 0,
    },
    "unidades": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 1,
    },
    "venta": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 1,
    },
  },
  "failsByRule": {
    "materiality": 5,
    "monetaryCoherence": 0,
    "narrativeCoherence": 3,
    "pareto": 2,
  },
  "failsByTypeAndRule": {
    "change": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 1,
    },
    "contribution": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 1,
    },
    "meta_gap": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 0,
    },
    "outlier": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 0,
    },
    "trend": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 1,
      "pareto": 0,
    },
  },
  "gateFailCount": 5,
  "gatePassCount": 20,
  "gateRescuedByContributionUpException": 0,
  "onlyMonetaryCoherenceFails": {
    "items": [],
    "total": 0,
  },
  "poolSize": 25,
  "usdSourceDistributionInR3Fails": {},
}
`;
